<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/pan_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_pan"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/aadhar_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_aadhar"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/blood_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_blood"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/joindate_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_joindate"
        android:inputType="date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/punching_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_punching"
        android:inputType="date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <EditText
        android:id="@+id/basicpay_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_basicpay"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
    <Button
        android:id="@+id/btn_update"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:onClick="updateButtonPressed"
        android:text="@string/btn_update"
        android:layout_below="@+id/address_edittext"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="25dp"
        android:onClick="deleteButtonPressed"
        android:text="@string/btn_delete"/>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
